output.txt
Thu Jun  5 06:52:56 UTC 2025
Linux LinuxMachine 5.15.167.4-microsoft-standard-WSL2 #1 SMP Tue Nov 5 00:21:55 UTC 2024 x86_64 x86_64 x86_64 GNU/Linux
uid=1000(cssuwbstudent) gid=1000(cssuwbstudent) groups=1000(cssuwbstudent),10(wheel)
=====================================================
1. If the section below is empty, the program compiles 
   without warnings with -Wall -Wextra flags
=====================================================
customer.cpp: In member function ‘void Customer::borrowMovie(Movie*)’:
customer.cpp:16:35: warning: unused parameter ‘movie’ [-Wunused-parameter]
   16 | void Customer::borrowMovie(Movie *movie) {
      |                            ~~~~~~~^~~~~
customer.cpp: In member function ‘void Customer::returnMovie(Movie*)’:
customer.cpp:20:35: warning: unused parameter ‘movie’ [-Wunused-parameter]
   20 | void Customer::returnMovie(Movie *movie) {
      |                            ~~~~~~~^~~~~
=====================================================
2. If the section below is empty or has the expected output 
    the program puns and produces correct output
=====================================================
Start testStore1
End testStore1
Start testStore2
End testStore2
=====================================
Start testStoreFinal
==========================
3333 Witch Wicked  | @137:movieStore
8888 Pig Porky  | @137:movieStore
4444 Moose Bullwinkle  | @137:movieStore
9999 Duck Daffy  | @137:movieStore
6666 Donkey Darrell  | @137:movieStore
7777 Spider Sammy  | @137:movieStore
1111 Mouse Mickey  | @137:movieStore
1000 Mouse Minnie  | @137:movieStore
9000 Lizard Larry  | @137:movieStore
8000 Wacky Wally  | @137:movieStore
5000 Frog Freddie  | @137:movieStore
2000 Duck Donald  | @137:movieStore
Sleepless in Seattle, 1993, Nora Ephron (10) - Comedy
Barry Levinson, Good Morning Vietnam, 1988 (10) - Drama
1939 7, Judy Garland, Victor Fleming, The Wizard of Oz (10) - Classics
==========================
Don't know how to create H
Don't know how to create H
Don't know how to create B
Don't know how to create R
Sleepless in Seattle, 1993, Nora Ephron (10) - Comedy
Barry Levinson, Good Morning Vietnam, 1988 (10) - Drama
1939 7, Judy Garland, Victor Fleming, The Wizard of Oz (10) - Classics
==========================
Don't know how to create B
Don't know how to create B
Sleepless in Seattle, 1993, Nora Ephron (10) - Comedy
Barry Levinson, Good Morning Vietnam, 1988 (10) - Drama
1939 7, Judy Garland, Victor Fleming, The Wizard of Oz (10) - Classics
==========================
Don't know how to create H
End testStoreFinal
=====================================
Done.
=====================================================
3. If the section below is empty, then there are no clang-tidy warnings 
   (ignore warnings from system headers, such as "13554 warnings generated.")
=====================================================
[1/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/classics.cpp.
17293 warnings generated.
[2/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/comedy.cpp.
34313 warnings generated.
[3/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/command.cpp.
54053 warnings generated.
[4/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/customer.cpp.
70025 warnings generated.
[5/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/drama.cpp.
87045 warnings generated.
[6/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/inventoryCmd.cpp.
106787 warnings generated.
[7/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/main.cpp.
120590 warnings generated.
[8/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/movie.cpp.
137625 warnings generated.
[9/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/movieStore.cpp.
158427 warnings generated.
[10/10] Processing file /home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/store_test.cpp.
179200 warnings generated.
/home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/customer.cpp:17:3: error: missing username/bug in TODO [google-readability-todo,-warnings-as-errors]
   17 |   // TODO
      |   ^~~~~~~
      |   // TODO(cssuwbstudent): 
/home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/customer.cpp:21:3: error: missing username/bug in TODO [google-readability-todo,-warnings-as-errors]
   21 |   // TODO
      |   ^~~~~~~
      |   // TODO(cssuwbstudent): 
/home/cssuwbstudent/Kwright6/CSS343/343-movies-Kwright6/customer.cpp:25:3: error: missing username/bug in TODO [google-readability-todo,-warnings-as-errors]
   25 |   // TODO
      |   ^~~~~~~
      |   // TODO(cssuwbstudent): 
Suppressed 179197 warnings (179197 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
3 warnings treated as errors
=====================================================
4. If the section below is empty, clang-format does not find any formatting issues
   You can fix formatting errors using "clang-format -i <filename>" on command line
=====================================================
Running clang-format on ./classics.cpp
Running clang-format on ./comedy.cpp
Running clang-format on ./command.cpp
Running clang-format on ./customer.cpp
Running clang-format on ./drama.cpp
Running clang-format on ./inventoryCmd.cpp
Running clang-format on ./main.cpp
Running clang-format on ./movie.cpp
Running clang-format on ./movieStore.cpp
Running clang-format on ./store_test.cpp
=====================================================
5. If there are any memory leaks, it should be in the output below
=====================================================
=====================================================
6. Using valgrind to check for memory leaks
   Check for "definitely lost" in the output below
=====================================================
==60445== Memcheck, a memory error detector
==60445== Copyright (C) 2002-2024, and GNU GPL'd, by Julian Seward et al.
==60445== Using Valgrind-3.23.0 and LibVEX; rerun with -h for copyright info
==60445== Command: ./a.out
==60445== Parent PID: 60089
==60445== 
==60445== 
==60445== HEAP SUMMARY:
==60445==     in use at exit: 0 bytes in 0 blocks
==60445==   total heap usage: 152 allocs, 152 frees, 128,217 bytes allocated
==60445== 
==60445== All heap blocks were freed -- no leaks are possible
==60445== 
==60445== For lists of detected and suppressed errors, rerun with: -s
==60445== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
Thu Jun  5 06:53:24 UTC 2025
=====================================================
To create an output.txt file with all the output from this script
Run the below command
      ./create-output.sh > output.txt 2>&1 
=====================================================
